[gd_scene load_steps=11 format=3 uid="uid://blkadft8fhbn2"]

[ext_resource type="Script" path="res://pizza_place.gd" id="1_pb6ub"]
[ext_resource type="Texture2D" uid="uid://b7lxrv2811cmw" path="res://assets/pizza_place.webp" id="2_wcdnn"]
[ext_resource type="FontFile" uid="uid://bt7me82f7hdaq" path="res://font/IRANYekan-Black.ttf" id="3_arucd"]
[ext_resource type="Texture2D" path="res://1 (1).png" id="3_dire6"]
[ext_resource type="Texture2D" uid="uid://c2pwq3gappt7s" path="res://assets/1 (1).png" id="4_k3vcf"]
[ext_resource type="Texture2D" uid="uid://dh5hlp364hfkd" path="res://assets/2 (1).png" id="5_h2jhw"]
[ext_resource type="Texture2D" uid="uid://cc4xespnptmvf" path="res://assets/3 (1).png" id="6_u7bsh"]
[ext_resource type="Texture2D" uid="uid://cpidshm1p52m0" path="res://assets/4 (1).png" id="7_ipji6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qkit3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_525rc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dire6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_k3vcf")
}, {
"duration": 1.0,
"texture": ExtResource("5_h2jhw")
}, {
"duration": 1.0,
"texture": ExtResource("6_u7bsh")
}, {
"duration": 1.0,
"texture": ExtResource("7_ipji6")
}],
"loop": true,
"name": &"talking",
"speed": 5.0
}]

[node name="pizza_place" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pb6ub")

[node name="BackGround" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -570.0
offset_top = -318.0
offset_right = 579.0
offset_bottom = 328.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wcdnn")

[node name="yes_pizza" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = 62.0
offset_right = 440.0
offset_bottom = 170.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_arucd")
theme_override_font_sizes/font_size = 37
text = "سلام
برای سفارش پیتزا کلیک کنید!"

[node name="no_pizza" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -443.0
offset_top = 67.0
offset_right = -14.0
offset_bottom = 167.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_arucd")
theme_override_font_sizes/font_size = 41
text = "میخوام خارج شم"

[node name="Chef" type="CharacterBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chef"]
shape = SubResource("CircleShape2D_qkit3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Chef"]
position = Vector2(589, 141)
scale = Vector2(0.280556, 0.280556)
sprite_frames = SubResource("SpriteFrames_525rc")
animation = &"talking"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="yes_pizza" to="." method="_on_yes_pizza_pressed"]
[connection signal="pressed" from="no_pizza" to="." method="_on_no_pizza_pressed"]
[connection signal="timeout" from="Timer" to="." method="TimeTimeout"]
